<resources>
    <string name="app_name">Maidan_Android</string>
    <string name="title_home">Home</string>
    <string name="title_book">Book</string>
    <string name="title_my_bookings">Bookings</string>
    <string name="title_settings">Settings</string>
    <string name="facebook_sign_in">Facebook Sign In</string>

    <!--Facebook-->
    <string name="facebook_app_id">2263000640383569</string>
    <string name="fb_login_protocol_scheme">fb2263000640383569</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Date picker-->
    <!--Application View-->
    <string name="pick_date">SELECT DATE</string>
    <string name="pickaground">PICK A GROUND</string>
    <string name="VenueName">MODEL TOWN WHITES</string>
    <string name="SelectDate">Select Date</string>

    <!-- Dropdown list -->
    <string-array name="match_overs">
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>4 hour</item>
        <item>5 hour</item>
        <item>6 hour</item>
        <item>7 hour</item>
        <item>8 hour</item>
        <item>9 hour</item>
        <item>10 hour</item>

    </string-array>

    <!--Gender Spinner-->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="Book">BOOK</string>
    <string name="logintoyour">LOGIN TO YOUR</string>
    <string name="maidan">MAIDAN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="no_account">don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="facebook">login with Facebook</string>
    <string name="google">login with Google</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">WELCOME TO YOUR</string>
    <string name="signup_btn">SIGN UP WITH EMAIL</string>
    <string name="signup_fb">SignUp with Facebook</string>
    <string name="signup_google">SignUp with Google</string>
    <string name="name">Name</string>
    <string name="passwordConfirm">Confirm Password</string>

    <string-array name="Categories">
        <item>Cricket</item>
        <item>BasketBall</item>
        <item>Football</item>
        <item>Swimming</item>
        <item>Tennis</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
