<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_green_to_dark_green_1"
    tools:context=".controllers.login.LoginFragment">

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway_medium"
        android:letterSpacing="0.10"
        android:text="@string/logintoyour"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/loginMaidanLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginMaidanLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/isar_cat"
        android:text="@string/maidan"
        android:textColor="@color/white"
        android:textSize="102sp"
        app:layout_constraintBottom_toTopOf="@+id/signupUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />


    <EditText
        android:id="@+id/signupUserEmail"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:hint="@string/email"
        android:inputType="textEmailSubject|textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signupPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMaidanLogo" />

    <EditText
        android:id="@+id/signupPassword"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUserEmail" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:background="@drawable/radius_login_btn"
        android:text="@string/login"
        android:textColor="#717171"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <TextView
        android:id="@+id/loginOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="198dp"
        android:layout_marginStart="198dp"
        android:text="or"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/facebook"
        style="@style/login_btn_fb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/facebook"
        app:layout_constraintBottom_toTopOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginOr" />


    <Button
        android:id="@+id/google"
        style="@style/login_btn_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginEnd="102dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/google"
        app:layout_constraintVertical_bias="0.52" />
</android.support.constraint.ConstraintLayout>