<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_email_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_green_to_dark_green_1"
    tools:context=".controllers.login.SignupFormFragment">

    <ProgressBar
        android:id="@+id/signupFormProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="315dp"
        android:layout_height="41dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/raleway_medium"
        android:letterSpacing="0.10"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/isar_cat"
        android:text="@string/maidan"
        android:textColor="@color/white"
        android:textSize="78sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <EditText
        android:id="@+id/signupUserName"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/signupUserEmail"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUserName" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUserEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <EditText
            android:id="@+id/signupPassword"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <EditText
            android:id="@+id/signupConfirmPassword"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <!--<EditText-->
    <!--android:id="@+id/signupConfirmPassword"-->
    <!--style="@style/email_password_login"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_marginEnd="36dp"-->
    <!--android:layout_marginStart="36dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:hint="@string/passwordConfirm"-->
    <!--android:inputType="textPassword"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout" />-->

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/radius_login_btn"
        android:text="@string/signup"
        android:textColor="#717171"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupConfirmPasswordLayout" />
</android.support.constraint.ConstraintLayout>
