<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupEmailActivity"
    android:background="@drawable/light_green_to_dark_green_1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginEnd="130dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/raleway_medium"
            android:letterSpacing="0.10"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/isar_cat"
            android:text="@string/maidan"
            android:textColor="@color/white"
            android:textSize="102sp"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <EditText
            android:id="@+id/signupUserName"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="42dp"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/signupUserEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/signupUserEmail"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/signupPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupUserName" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signupPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/radius"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/signupConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupUserEmail">

            <EditText
                style="@style/email_password_login"
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signupConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/radius"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout">

            <EditText
                style="@style/email_password_login"
                android:id="@+id/signupConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/passwordConfirm"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <!--<EditText-->
            <!--android:id="@+id/signupConfirmPassword"-->
            <!--style="@style/email_password_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginEnd="36dp"-->
            <!--android:layout_marginStart="36dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:hint="@string/passwordConfirm"-->
            <!--android:inputType="textPassword"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout" />-->

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/radius_login_btn"
            android:text="@string/signup"
            android:textColor="#717171"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupConfirmPasswordLayout" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>