<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_email_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_green_to_dark_green_1"
    tools:context=".controllers.login.SignupDetailsFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/raleway_medium"
        android:letterSpacing="0.10"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/isar_cat"
        android:text="@string/maidan"
        android:textColor="@color/white"
        android:textSize="102sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <EditText
        android:id="@+id/dob"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:hint="Date of birth"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/gender"
        style="@style/email_password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:hint="Gender"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <EditText
            android:id="@+id/phoneNumber"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Phone number"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cnicLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">

        <EditText
            android:id="@+id/cnic"
            style="@style/email_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="cnic"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <!--<EditText-->
    <!--android:id="@+id/signupConfirmPassword"-->
    <!--style="@style/email_password_login"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_marginEnd="36dp"-->
    <!--android:layout_marginStart="36dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:hint="@string/passwordConfirm"-->
    <!--android:inputType="textPassword"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout" />-->

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:background="@drawable/radius_login_btn"
        android:text="@string/signup"
        android:textColor="#717171"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnicLayout" />
</android.support.constraint.ConstraintLayout>
